<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/g1">
        <item
            android:id="@+id/zhihuitem"
            android:checkable="true"
            android:icon="@drawable/zhihu"
            android:title="@string/zhihu"
            android.support.design:itemTextColor="@color/nev_item"
            app:itemIconTint="@color/nev_item" />
        <item
            android:id="@+id/topnewsitem"
            android:checkable="true"
            android:icon="@drawable/wangyi"
            android:title="@string/topnews"
            android.support.design:itemTextColor="@color/nev_item"
            app:itemIconTint="@color/nev_item" />
        <item
            android:id="@+id/meiziitem"
            android:checkable="true"
            android:icon="@drawable/look2"
            android:title="@string/meizi"
            android.support.design:itemTextColor="@color/nev_item"
            app:itemIconTint="@color/nev_item" />
    </group>
    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="@string/theme"
                app:actionLayout="@layout/action_view_switch" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/settin"
                android:title="@string/action_settings" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        android.support.design:itemTextColor="@color/nev_item" />

</menu>